# ContextPacker

./: .gitignore  ContextPacker.spec  README.md  TODO.md  app.py  build-for-release.ps1  config.json  generate-requirements.ps1  noxfile.py  pyi_rth_selenium.py  pyproject.toml  requirements.txt
.ai-context/: ContextPacker-context.md
.archive/: ContextPacker.7z
.build-tools/: Builder.ps1  builder-context.md
.gemini/: contextpacker-context.md
.github/: copilot-instructions.md
.scripts/: ProjectToolbox.ps1  build_release.ps1  check_env.ps1  check_env.py  diagnose_webdriver_network.py  get_driver.py
.testing/: notes.md
core/: actions.py  app_message_handler.py  app_signals.py  app_ui_controller.py  app_worker_manager.py  browser_utils.py  config.py  config_manager.py  config_service.py  constants.py  crawler.py  error_handling.py  icon_utils.py  logger_setup.py  packager.py  platform_detection.py  platform_utils.py  signals.py  state_manager.py  state_service.py  task_handler.py  task_service.py  theme_manager.py  types.py  utils.py  version.py
ui/: about_dialog.py  input_panels.py  main_frame.py  main_window.py  output_panels.py  panels.py  styles.py
ui/widgets/: buttons.py  dialogs.py  gauges.py  inputs.py  lists.py
