[tool.poetry]
name = "contextpacker"
version = "1.7.0"
description = "A desktop app to scrape websites, Git repositories, or package local files into a single file, optimized for consumption by LLMs."
authors = ["dcog989 you@example.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.15"
beautifulsoup4 = "^4.14.2"
markdownify = "^1.2.0"
repomix = "^0.3.4"
selenium = "^4.38.0"
wxpython = { version = "^4.2.4", optional = true }
lxml = "^6.0.2"
# Prefer normal dependency specifiers so Poetry can resolve a compatible wheel
pywin32 = "^311"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"
nox = "^2025.10.16"
# webdriver-manager intentionally omitted from dev dependencies to avoid triggering
# Poetry to re-resolve binary wheels during CI/dev installs. Install locally if required.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Placeholder for future linter configuration
line-length = 120

[tool.poetry.extras]
# Install GUI extras when you actually need the desktop runtime
gui = ["wxpython"]
