[tool.poetry]
name = "contextpacker"
version = "2.0.0"
description = "A desktop app to scrape websites, Git repositories, or package local files into a single file, optimized for consumption by LLMs."
authors = ["dcog989 you@example.com"]
readme = "README.md"
packages = [{ include = "core" }, { include = "ui" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
beautifulsoup4 = "^4.14.2"
markdownify = "^1.2.0"
repomix = "^0.3.4"
selenium = "^4.38.0"
pyside6 = { version = "^6.10.0" }
lxml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"
nox = "^2025.10.16"
# webdriver-manager intentionally omitted from dev dependencies to avoid triggering
# Poetry to re-resolve binary wheels during CI/dev installs. Install locally if required.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Placeholder for future linter configuration
line-length = 120
