[tool.poetry]
name = "contextpacker"
version = "2.0.0"
description = "A desktop app to scrape websites, Git repositories, or package local files into a single file, optimized for consumption by LLMs."
authors = ["dcog989 you@example.com"]
readme = "README.md"
packages = [{ include = "core" }, { include = "ui" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
beautifulsoup4 = "^4.14.2"
markdownify = "^1.2.0"
repomix = "^0.3.4"
requests = "^2.32.5"
pyside6 = { version = "^6.10.0" }
lxml = "^6.0.2"
pydantic = "^2.12.4"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"
nox = "^2025.10.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
